Fix topics nav on 1100px resolution
The topics nav was overlapping with the topics images at certain
resolutions.

--- a/sites/all/themes/magazeen_lite/scss/topics.scss
+++ b/sites/all/themes/magazeen_lite/scss/topics.scss
@@ -232,7 +232,7 @@ $transition-time: 0.4s;
   margin: 0;
   padding: 0;
 
-  @media(min-width: 1100px) {
+  @media(min-width: 1200px) {
     position: fixed;
     right: 32px;
     top: 234px;
